--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ https://templatemo.com/tm-516-known
 
 							<div class="courses-detail">
 
-								<p>‘The journal clubs in RDA3  were not helpful.’ </p>
+								<p>‘The journal clubs in RDA3 were not helpful.’ </p>
 								<p>We have re-structured and re-formatted RDA3, removing the journal clubs.</p>
 							</div>
 
@@ -583,37 +583,37 @@ https://templatemo.com/tm-516-known
 
 
 	<!-- psychsoc -->
-     <section id="psychsoc">
-          <div class="container">
-               <div class="row">
+	<section id="psychsoc">
+		<div class="container">
+			<div class="row">
 
-                    <div class="col-md-4 col-sm-4">
-                         <div class="feature-thumb">
-                              <span> </span>
-                              <h3>Psychology Society</h3>
-                              <p>Immerse yourself in the discipline of Psychology and meet like-minded people on your course</p>
-                         </div>
-                    </div>
+				<div class="col-md-4 col-sm-4">
+					<div class="feature-thumb">
+						<span> </span>
+						<h3>Psychology Society</h3>
+						<p>Immerse yourself in the discipline of Psychology and meet like-minded people on your course</p>
+					</div>
+				</div>
 
-                    <div class="col-md-4 col-sm-4">
-                         <div class="feature-thumb">
-                              <span></span>
-                              <h3>Take Part</h3>
-                              <p>Earn SONA credits by taking part in our exciting research</p>
-                         </div>
-                    </div>
+				<div class="col-md-4 col-sm-4">
+					<div class="feature-thumb">
+						<span></span>
+						<h3>Take Part</h3>
+						<p>Earn SONA credits by taking part in our exciting research</p>
+					</div>
+				</div>
 
-                    <div class="col-md-4 col-sm-4">
-                         <div class="feature-thumb">
-                              <span></span>
-                              <h3>Psychology Society</h3>
-                              <p>Immerse yourself in the discipline of Psychology and meet like-minded people on your course</p>
-                         </div>
-                    </div>
+				<div class="col-md-4 col-sm-4">
+					<div class="feature-thumb">
+						<span></span>
+						<h3>Psychology Society</h3>
+						<p>Immerse yourself in the discipline of Psychology and meet like-minded people on your course</p>
+					</div>
+				</div>
 
-               </div>
-          </div>
-     </section> 
+			</div>
+		</div>
+	</section>
 
 
 
@@ -822,7 +822,7 @@ https://templatemo.com/tm-516-known
 
 				<div class="col-md-6 col-sm-12">
 					<div class="contact-image">
-						<img src="images/zest.jpg" class="img-responsive" alt="A cafe on campus">
+						<img src="images/Zest.jpg" class="img-responsive" alt="A cafe on campus">
 					</div>
 				</div>
 
@@ -846,9 +846,9 @@ https://templatemo.com/tm-516-known
 						</address>
 
 						<ul class="social-icon">
-						
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-instagram"></a></li>
+
+							<li><a href="https://twitter.com/@PsychologyLHU" class="fa fa-twitter"></a></li>
+							<li><a href="https://www.instagram.com/psychathope/" class="fa fa-instagram"></a></li>
 						</ul>
 
 						<div class="copyright-text">
@@ -872,10 +872,10 @@ https://templatemo.com/tm-516-known
 						<div class="footer_menu">
 							<h2>Quick Links</h2>
 							<ul>
-								<li><a href="#">Career</a></li>
-								<li><a href="#">Investor</a></li>
-								<li><a href="#">Terms & Conditions</a></li>
-								<li><a href="#">Refund Policy</a></li>
+								<li><a href="#reps">Student Reps</a></li>
+								<li><a href="#wedid">You said, we did</a></li>
+								<li><a href="#news">News</a></li>
+								
 							</ul>
 						</div>
 					</div>
@@ -884,7 +884,7 @@ https://templatemo.com/tm-516-known
 				<div class="col-md-4 col-sm-12">
 					<div class="footer-info newsletter-form">
 						<div class="section-title">
-						<!--	<h2>Newsletter Signup</h2>
+							<!--	<h2>Newsletter Signup</h2>
 						</div>
 						<div>
 							<div class="form-group">
@@ -895,11 +895,11 @@ https://templatemo.com/tm-516-known
 								<span><sup>*</sup> Please note - we do not spam your email.</span>
 							</div>
 						</div>-->
+						</div>
 					</div>
-				</div>
 
+				</div>
 			</div>
-		</div>
 	</footer>
 
 
