--- a/index.html
+++ b/index.html
@@ -598,16 +598,16 @@ https://templatemo.com/tm-516-known
 				<div class="col-md-4 col-sm-4">
 					<div class="feature-thumb">
 						<span></span>
-						<h3>Take Part</h3>
-						<p>Earn SONA credits by taking part in our exciting research</p>
+						<h3>Society Events</h3>
+						<p>News &amp; Events</p>
 					</div>
 				</div>
 
 				<div class="col-md-4 col-sm-4">
 					<div class="feature-thumb">
 						<span></span>
-						<h3>Psychology Society</h3>
-						<p>Immerse yourself in the discipline of Psychology and meet like-minded people on your course</p>
+						<h3>Take Part</h3>
+						<p>Take part in research studies</p>
 					</div>
 				</div>
 
@@ -636,62 +636,57 @@ https://templatemo.com/tm-516-known
 							<img src="images/author-image1.png" class="img-responsive" alt="">
 						</div>
 						<div class="team-info">
-							<h3>Level C Core 1</h3>
-							<span>‘There are too many lectures focussing on the history of Psychology’</span>
+							<h3>Headline</h3>
+							<span>Date</span>
 						</div>
-						<ul class="team-info">
-							<span>We have re-written one of the lectures to explore careers in Psychology.</span>
-						</ul>
+						<div class="team-info">
+							<span>Additional Info</span>
+						</div>
 					</div>
 				</div>
 
 				<div class="col-sm-4 col-md-4">
 					<div class="team-thumb">
 						<div class="team-image">
-							<img src="images/author-image2.jpg" class="img-responsive" alt="">
+							<img src="images/author-image2.png" class="img-responsive" alt="">
 						</div>
 						<div class="team-info">
-							<h3>Catherine</h3>
-							<span>Education is the key!</span>
+							<h3>Headline</h3>
+							<span>Date</span>
 						</div>
-						<ul class="social-icon">
-							<li><a href="#" class="fa fa-google"></a></li>
-							<li><a href="#" class="fa fa-instagram"></a></li>
-						</ul>
+						<div class="team-info">
+							<span>Additional Info</span>
+						</div>
 					</div>
 				</div>
 
 				<div class="col-md-4 col-sm-4">
 					<div class="team-thumb">
 						<div class="team-image">
-							<img src="images/author-image3.jpg" class="img-responsive" alt="">
+							<img src="images/author-image3.png" class="img-responsive" alt="">
 						</div>
 						<div class="team-info">
-							<h3>Jessie Ca</h3>
-							<span>I like Online Courses</span>
+							<h3>Date</h3>
+							<span>HEadline</span>
 						</div>
-						<ul class="social-icon">
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-envelope-o"></a></li>
-							<li><a href="#" class="fa fa-linkedin"></a></li>
-						</ul>
+						<div class="team-info">
+						<span>Additional Info</span>
+						</div>
 					</div>
 				</div>
 
-				<div class="col-md-3 col-sm-6">
+				<div class="col-md-4 col-sm-4">
 					<div class="team-thumb">
 						<div class="team-image">
-							<img src="images/author-image4.jpg" class="img-responsive" alt="">
+							<img src="images/author-image4.png" class="img-responsive" alt="">
 						</div>
 						<div class="team-info">
-							<h3>Andrew Berti</h3>
-							<span>Learning is fun</span>
+							<h3>Date</h3>
+							<span>Headline</span>
 						</div>
-						<ul class="social-icon">
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-google"></a></li>
-							<li><a href="#" class="fa fa-behance"></a></li>
-						</ul>
+						<div class="social-icon">
+					<span>Additional Info</span>
+						</div>
 					</div>
 				</div>
 
@@ -707,7 +702,7 @@ https://templatemo.com/tm-516-known
 
 				<div class="col-md-12 col-sm-12">
 					<div class="section-title">
-						<h2>Student Reviews <small>from around the world</small></h2>
+						<h2>Student Comments <small>from around the campus</small></h2>
 					</div>
 
 					<div class="owl-carousel owl-theme owl-client">
@@ -717,10 +712,10 @@ https://templatemo.com/tm-516-known
 									<img src="images/tst-image1.jpg" class="img-responsive" alt="">
 								</div>
 								<div class="tst-author">
-									<h4>Jackson</h4>
-									<span>Shopify Developer</span>
+									<h4>Name</h4>
+									<span>Course</span>
 								</div>
-								<p>You really do help young creative minds to get quality education and professional job search assistance. I’d recommend it to everyone!</p>
+								<p>I love it here</p>
 								<div class="tst-rating">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
@@ -737,10 +732,10 @@ https://templatemo.com/tm-516-known
 									<img src="images/tst-image2.jpg" class="img-responsive" alt="">
 								</div>
 								<div class="tst-author">
-									<h4>Camila</h4>
-									<span>Marketing Manager</span>
+									<h4>Name</h4>
+									<span>Course</span>
 								</div>
-								<p>Trying something new is exciting! Thanks for the amazing law course and the great teacher who was able to make it interesting.</p>
+								<p>The staff are so helpful</p>
 								<div class="tst-rating">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
@@ -795,7 +790,7 @@ https://templatemo.com/tm-516-known
 
 
 	<!-- CONTACT -->
-	<section id="contact">
+	<!--<section id="contact">
 		<div class="container">
 			<div class="row">
 
@@ -828,7 +823,7 @@ https://templatemo.com/tm-516-known
 
 			</div>
 		</div>
-	</section>
+	</section>-->
 
 
 	<!-- FOOTER -->
@@ -875,7 +870,7 @@ https://templatemo.com/tm-516-known
 								<li><a href="#reps">Student Reps</a></li>
 								<li><a href="#wedid">You said, we did</a></li>
 								<li><a href="#news">News</a></li>
-								
+
 							</ul>
 						</div>
 					</div>
@@ -910,4 +905,6 @@ https://templatemo.com/tm-516-known
 	<script src="js/smoothscroll.js"></script>
 	<script src="js/custom.js"></script>
 
-</body></html>
+</body>
+
+</html>
