--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
 						<div class="col-md-4 col-sm-4">
 							<div class="item">
 								<div class="tst-image">
-									<img src="images/tst-image1.jpg" class="img-responsive" alt="">
+									<img src="images/psy.png" class="img-responsive" alt="">
 								</div>
 								<div class="tst-author">
 									<h4>Beata</h4>
@@ -993,7 +993,7 @@
 							</div>
 						</div>
 
-						<div class="col-md-4 col-sm-4">
+						<!--<div class="col-md-4 col-sm-4">
 							<div class="item">
 								<div class="tst-image">
 									<img src="images/tst-image2.jpg" class="img-responsive" alt="">
@@ -1049,7 +1049,7 @@
 							</div>
 						</div>
 
-					</div>
+					</div>-->
 
 				</div>
 			</div>
