--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
 	<!-- PRE LOADER -->
-	<section class="preloader">
+		<section class="preloader">
 		<div class="spinner">
-			<span class="spinner-rotate"></span>
+			<div class="section-title">
+				<h2>Loading<small>.....</small></h2>
+			</div>
+				<span class="spinner-rotate"></span>
 		</div>
 	</section>
-
-	<!-- This is the menu bar, don't add too many links as they scroll across and under making the site look bad -->
+<!-- This is the menu bar, don't add too many links as they scroll across and under making the site look bad -->
 	<!-- MENU -->
-	<section class="navbar custom-navbar navbar-fixed-top" role="navigation">
+	<div class="navbar custom-navbar navbar-fixed-top" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
 				<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -50,24 +52,21 @@
 				<!-- lOGO TEXT HERE -->
 				<a href="#home" class="navbar-brand">Psychology@Hope</a>
 			</div>
-
 			<!-- MENU LINKS -->
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-nav-first">
 					<li><a href="#top" class="smoothScroll">Home</a></li>
+					<li><a href="#voice" class="smoothScroll">Student Voice</a></li>
 					<li><a href="#reps" class="smoothScroll">Reps</a></li>
 					<li><a href="#wedid" class="smoothScroll">You said, we did</a></li>
 					<li><a href="#psychsoc" class="smoothScroll">PsychSoc</a></li>
 					<li><a href="#news" class="smoothScroll">News</a></li>
 					<li><a href="#contact" class="smoothScroll">Contact</a></li>
 				</ul>
-
 			</div>
 		</div>
-	</section>
-
-
-	<!-- HOME  this is the carousel part, it's possible to change the background pics in the css file -->
+	</div>
+<!-- HOME  this is the carousel part, it's possible to change the background pics in the templatemo-style.css file -->
 	<section id="home">
 		<div class="row">
 			<div class="owl-carousel owl-theme home-slider">
@@ -76,8 +75,8 @@
 						<div class="container">
 							<div class="col-md-6 col-sm-12">
 								<h1>Connecting with Students</h1>
-								<h3>We value feedback from students about our courses and associated resources. The Psychology Student Voice team consists of staff representatives and student representatives at all levels of study.<br> A key role of the student representatives is to work in partnership with the staff representatives and the student body to help enhance the student experience. </h3>
-								<a href="#reps" class="section-btn btn btn-default smoothScroll">Discover more</a>
+								<h3>Student voice is important for empowering and engaging students and we value feedback from students about our courses and associated resources. The Psychology Student Voice team consists of staff representatives and student representatives at all levels of study.<br> A key role of the student representatives is to work in partnership with the staff representatives and the student body to help enhance the student experience. </h3>
+								<a href="#voice" class="section-btn btn btn-default smoothScroll">Discover more</a>
 							</div>
 						</div>
 					</div>
@@ -107,17 +106,19 @@
 						</div>
 					</div>
 				</div>
+				</div>
 			</div>
-		</div>
-	</section>
+		</section>
 
 	<!-- REPS -->
-	<section id="reps">
+	<section id="voice">
 		<div class="container">
 			<div class="row">
 
 				<div class="section-title">
 					<h2>Student Voice<small>What is the Student Voice Committee</small></h2>
+					<p>The Student Voice Committee helps to increase student engagement and build positive relationships between the Psychology Department and our students. When students believe they are respected and their views are valued, they: feel like they belong, feel physically and emotionally safe.</p>
+					<p>Listening and learning from the student voice allows us and student bodies to receive and analyse up-to-date student feedback. This feedback helps to keep us informed of the needs of the students, which in turn allows us to improve, refine and make educated decisions toward all departmental processes.</p>
 				</div>
 			</div>
 
@@ -127,13 +128,9 @@
 						<img src="images/tinygreen.png" class="img-responsive" alt="">
 					</div>
 					<div class="team-info">
-						<h3>Student Reps</h3>
-						<span>
-							<ul>
-								<li>Student Voice Committee in the Department of Psychology is a committee made up of staff and students from Psychology and we work together to ensure the psychology courses are meeting the needs and expectations of our students and staff
-								</li>
-							</ul>
-						</span>
+					
+						<p>The Student Voice Committee in the Department of Psychology is a committee made up of staff and students from Psychology and we work together to ensure the psychology courses are meeting the needs and expectations of our students and staff
+						</p>
 					</div>
 				</div>
 			</div>
@@ -145,12 +142,8 @@
 					</div>
 					<div class="team-info">
 						<!--<h3>Research Seminar</h3>-->
-						<span>
-							<ul>
-								<li>We consider all the things that are going well on the courses, and we also look at possible improvements. The University relies on feedback from students to make sure that it is providing the best quality of education
+						<span>We consider all the things that are going well on the courses, and we also look at possible improvements. The University relies on feedback from students to make sure that it is providing the best quality of education
 									In the Department of Psychology, we are very keen to ensure the student voice is heard! A Student Rep's role is to be the ‘voice’ for your group
-								</li>
-							</ul>
 						</span>
 					</div>
 				</div>
@@ -163,18 +156,15 @@
 					</div>
 					<div class="team-info">
 						<h3>Staff Reps</h3>
-						<span>
-							<ul>
-								<li>Chair: Dr Miko Zarzycki</li>
-								<li>UG Staff Rep: Dr Catherine Thompson</li>
-								<li>PG Staff Rep: Dr Letizia Palumbo</li>
-							</ul>
-						</span>
-					</div>
+						<span>							
+						<strong>Chair: </strong>Dr Miko Zarzycki</span><br>
+								<span><strong>UG Staff Rep: </strong>Dr Catherine Thompson</span><br>
+								<span><strong>PG Staff Rep: </strong>Dr Letizia Palumbo</span>
+												</div>
 				</div>
 			</div>
 		</div>
-		</div>
+		
 	</section>
 
 	<section id="reps">
@@ -191,9 +181,9 @@
 					<figure>
 						<span><i class="fa fa-users"></i></span>
 						<figcaption>
-							<h3>Level C Student Reps</h3>
-							<p>Core 1: Steph Todd [Email]</p>
-							<p>Core 2: Iqra Aziz [Email]</p>
+							<h3>Level C</h3>
+							<p>Steph Todd [Email]</p>
+							<p>Iqra Aziz [Email]</p>
 						</figcaption>
 					</figure>
 				</div>
@@ -202,9 +192,22 @@
 					<figure>
 						<span><i class="fa fa-users"></i></span>
 						<figcaption>
-							<h3>Level I Student Reps</h3>
-							<p>Level I Core 1: [Name] [Email]</p>
-							<p>Level I Core 2: [Name] [Email]</p>
+							<h3>Level I</h3>
+							<p>Andreea Iordache [Email]</p>
+							<p>Jamie Sharp [Email]</p>
+							<p>Jasmine Lea [Email]</p>
+						</figcaption>
+					</figure>
+				</div>
+				<div class="col-md-3 col-sm-3">
+					<figure>
+						<span><i class="fa fa-users"></i></span>
+						<figcaption>
+							<h3>Level H</h3>
+							<p>Caroline Knowles [Email]</p>
+							<p>Gemma Hough [Email]</p>
+							<p>Imogen Freedman [Email]</p>
+							<p>Joseph Martin [Email]</p>
 
 						</figcaption>
 					</figure>
@@ -213,22 +216,9 @@
 					<figure>
 						<span><i class="fa fa-users"></i></span>
 						<figcaption>
-							<h3>Level H Student Reps</h3>
-							<p>Level H: Caroline Knowles [Email]</p>
-							<p>Level H: Gemma Hough [Email]</p>
-							<p>Level H: Imogen Freedman [Email]</p>
-							<p>Level H: Joseph Martin [Email]</p>
-
-						</figcaption>
-					</figure>
-				</div>
-				<div class="col-md-3 col-sm-3">
-					<figure>
-						<span><i class="fa fa-users"></i></span>
-						<figcaption>
-							<h3>PG Student Reps</h3>
-							<p>PG Taught: [Name] [Email]</p>
-							<p>PG Research: [Name] [Email]</p>
+							<h3>Postgraduate</h3>
+							<p>[Name] [Email]</p>
+							<p>[Name] [Email]</p>
 						</figcaption>
 					</figure>
 				</div>
@@ -236,8 +226,7 @@
 
 
 		</div>
-		</div>
-	</section>
+		</section>
 
 
 	<!-- wedid -->
@@ -966,12 +955,10 @@
 	<section id="testimonial">
 		<div class="container">
 			<div class="row">
-
 				<div class="col-md-12 col-sm-12">
 					<div class="section-title">
 						<h2>Student Comments <small>from around the campus</small></h2>
 					</div>
-
 					<div class="owl-carousel owl-theme owl-client">
 						<div class="col-md-4 col-sm-4">
 							<div class="item">
@@ -982,7 +969,7 @@
 									<h4>Beata</h4>
 									<span>Psychology</span>
 								</div>
-								<p>I really enjoyed the trip to Plas Caerdeon. I think that I really got to know more people doing my course and made some new friends. The food was lovely and the staff there made the activities fun, and treated us like adults, as i was afraid we would be seen as children. I enjoyed the mountain walk but I wish we had more time to do more stuff.</p>
+								<p>I really enjoyed the trip to Plas Caerdeon. I think that I really got to know more people doing my course and made some new friends. The food was lovely and the staff there made the activities fun, and treated us like adults, as I was afraid we would be seen as children. I enjoyed the mountain walk but I wish we had more time to do more stuff.</p>
 								<div class="tst-rating">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
