--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 					<li><a href="#psychsoc" class="smoothScroll">PsychSoc</a></li>
 					<li><a href="#news" class="smoothScroll">News</a></li>
 					<li><a href="#contact" class="smoothScroll">Contact</a></li>
+					
 				</ul>
 			</div>
 		</div>
@@ -174,7 +175,7 @@
 				<div class="row">
 
 					<div class="section-title">
-						<h2>Student Representatives<small>Details tbc</small></h2>
+						<h2>Student Representatives<small></small></h2>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-3">
@@ -229,10 +230,10 @@
 		</section>
 
 
-	<!-- wedid -->
 	<section id="wedid">
 		<div class="container">
 			<div class="row">
+			<span> <a href="#wedid">Level C</a> | <a href="#wedidI">Level I</a> | <a href="#wedidH">Level H </a></span>
 				<div class="section-title">
 					<h2>You said.... we did<small>Responding to Level C Student feedback</small>
 					</h2>
@@ -247,14 +248,15 @@
 									<img src="images/smallred.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level C Core 1 2023/24</span>
+									<h4>Level C Core 1 2023/24</h4>
+									<span>Core 1 Lecture Series</span>
 
 								</div>
 							</div>
 							<div class="courses-detail">
 
 								<p><strong>‘There are too many lectures focussing on the history of Psychology’</strong></p>
-								<p>While you should appreciate the importance of the history of the discipline, we appreciate that feedback from students indicates it is not necessarily theior favourite topic. As such we have rewritten a lecture to give students more focussed direction about careers in psychology</p>
+								<p>While you should appreciate the importance of the history of the discipline, we appreciate that feedback from students indicates it is not necessarily their favourite topic. As such we have rewritten a lecture to give students more focussed direction about careers in psychology</p>
 							</div>
 						</div>
 					</div>
@@ -268,7 +270,8 @@
 									<img src="images/smallred.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level C Core 1 2023/24</span>
+									<h4>Level C Core 1 2023/24</h4>
+									<span>Core 1 Research Design &amp; Analysis (RDA)</span>
 
 								</div>
 							</div>
@@ -292,7 +295,8 @@
 									<img src="images/smallred.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level C Core 1 2023/24</span>
+									<h4>Level C Core 1 2023/24</h4>
+									<span>General Comment: Moodle</span>
 
 								</div>
 							</div>
@@ -316,7 +320,8 @@
 									<img src="images/smallred.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level C Core 1 2023/24</span>
+									<h4>Level C Core 1 2023/24</h4>
+									<span>Core 1 Lecture Series</span>
 
 								</div>
 							</div>
@@ -341,7 +346,8 @@
 									<img src="images/smallred.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level C Core 1 2023/24</span>
+									<h4>Level C Core 1 2023/24</h4>
+									<span>Core 1 Lecture Series</span>
 
 								</div>
 							</div>
@@ -364,7 +370,8 @@
 									<img src="images/smallred.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level C Core 2 2023/24</span>
+									<h4>Level C Core 2 2023/24</h4>
+									<span>Core 2 EDP Seminars</span>
 
 								</div>
 							</div>
@@ -387,7 +394,8 @@
 									<img src="images/smallred.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level C Core 2 2023/24</span>
+									<h4>Level C Core 2 2023/24</h4>
+									<span>Core 2 Lecture Series</span>
 
 								</div>
 							</div>
@@ -411,7 +419,8 @@
 									<img src="images/smallred.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level C Core 2 2023/24</span>
+									<h4>Level C Core 2 2023/24</h4>
+									<span>Core 2 Tutorials</span>
 
 								</div>
 							</div>
@@ -438,7 +447,7 @@
 
 
 
-	<section>
+	<section id="wedidI">
 		<div class="container">
 			<div class="row">
 				<div class="section-title">
@@ -455,7 +464,8 @@
 									<img src="images/smallgreen.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level I Core 1 2023/24</span>
+									<h4>Level I Core 1 2023/24</h4>
+									<span>Core 1 Explorations in Psychology Lecture Series</span>
 
 								</div>
 							</div>
@@ -476,7 +486,8 @@
 									<img src="images/smallgreen.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level I Core 1 2023/24</span>
+										<h4>Level I Core 1 2023/24</h4>
+									<span>Core 1 Explorations in Psychology Lecture Series</span>
 
 								</div>
 							</div>
@@ -501,7 +512,8 @@
 									<img src="images/smallgreen.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level I Core 1 2023/24</span>
+									<h4>Level I Core 1 2023/24</h4>
+									<span>Core 1 Research Design &amp; Analysis 2</span>
 
 								</div>
 							</div>
@@ -525,7 +537,8 @@
 									<img src="images/smallgreen.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level I Core 1 2023/24</span>
+										<h4>Level I Core 1 2023/24</h4>
+									<span>General Comment: Practising Assessments</span>
 
 								</div>
 							</div>
@@ -533,7 +546,7 @@
 							<div class="courses-detail">
 
 								<p><strong>‘It would help if you could provide the opportunity to practice assessments.’</strong></p>
-								<p>Example assessment questions have been incorporated into some lectures. Remember that feedback on your past assessments should also influence how you can work to improve your subsequent assessments as there are commonalities in all assessed work, referencing for example.</p>
+								<p>Example assessment questions have been incorporated into some lectures. Remember that feedback on your past assessments should also influence how you can work to improve your subsequent assessments as there are commonalities in all assessed work, sentence structure and referencing for example.</p>
 							</div>
 
 
@@ -550,7 +563,8 @@
 									<img src="images/smallgreen.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level I Core 1 2023/24</span>
+									<h4>Level I Core 1 2023/24</h4>
+									<span>Core 1 Research Design &amp; Analysis 2</span>
 
 								</div>
 							</div>
@@ -573,7 +587,8 @@
 									<img src="images/smallgreen.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level I Core 2 2023/24</span>
+									<h4>Level I Core 2 2023/24</h4>
+									<span>Core 2 Applied Psychology</span>
 
 								</div>
 							</div>
@@ -596,7 +611,8 @@
 									<img src="images/smallgreen.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level I Core 2 2023/24</span>
+									<h4>Level I Core 2 2023/24</h4>
+									<span>Core 2 Prevention Science</span>
 
 								</div>
 							</div>
@@ -604,7 +620,7 @@
 							<div class="courses-detail">
 
 								<p><strong>‘We would appreciate more information on the Prevention Science seminar assessment.’</strong></p>
-								<p>To support this assessment we have increased the information available describing the assessment. We have also decided to introduce feedback sessions during the seminars.</p>
+								<p>To support this assessment we have increased the information available describing the assessment. We have also decided to introduce feedback sessions during the seminars where students can ask questions that relate to the assessment.</p>
 							</div>
 
 
@@ -619,7 +635,7 @@
 
 
 
-	<section>
+<section id="wedidH">
 		<div class="container">
 			<div class="row">
 				<div class="section-title">
@@ -636,14 +652,14 @@
 									<img src="images/smallnavy.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level H Core 1 2023/24</span>
-
+									<h4>Level H Core 1 2023/24</h4>
+										<span>Core 1 Lecture Series: Psychobiology</span>
 								</div>
 							</div>
 							<div class="courses-detail">
 
 								<p><strong>‘Can you provide definitions and key terms in the Psychobiology lectures.’</strong></p>
-								<p>We will make sure to provide and explain all necessary definitions and key terms in the Psychobiology lectures. Ask questions if there is anything that you don't understand.</p>
+								<p>We will make sure to provide and explain all necessary definitions and key terms in the Psychobiology lectures. We welcome you to ask questions if there is anything that you don't understand.</p>
 							</div>
 						</div>
 					</div>
@@ -657,8 +673,8 @@
 									<img src="images/smallnavy.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level H Core 1 2023/24</span>
-
+									<h4>Level H Core 1 2023/24</h4>
+<span>Core 1 Dissertation </span>
 								</div>
 							</div>
 
@@ -682,7 +698,8 @@
 									<img src="images/smallnavy.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level H Core 1 2023/24</span>
+									<h4>Level H Core 1 2023/24</h4>
+										<span>Core 1 Lecture Series: Psychobiology</span>
 
 								</div>
 							</div>
@@ -706,7 +723,8 @@
 									<img src="images/smallnavy.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level H Core 1 2023/24</span>
+									<h4>Level H Core 1 2023/24</h4>
+<span>Core 1 Dissertation </span>
 
 								</div>
 							</div>
@@ -731,7 +749,8 @@
 									<img src="images/smallnavy.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level H Core 1 2023/24</span>
+									<h4>Level H Core 1 2023/24</h4>
+										<span>Core 1 Research Design &amp; Analysis 3</span>
 
 								</div>
 							</div>
@@ -754,7 +773,8 @@
 									<img src="images/smallnavy.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level H Core 2 2023/24</span>
+									<h4>Level H Core 2 2023/24</h4>
+									<span>Core 2 Option Lectures: Cognitive Neuroscience</span>
 								</div>
 							</div>
 							<div class="courses-detail">
@@ -772,7 +792,8 @@
 									<img src="images/smallnavy.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level H Core 2 2023/24</span>
+									<h4>Level H Core 2 2023/24</h4>
+									<span>Core 2 General Comment: Option Lectures</span>
 								</div>
 							</div>
 							<div class="courses-detail">
@@ -791,7 +812,8 @@
 									<img src="images/smallnavy.png" class="img-responsive" alt="">
 								</div>
 								<div class="courses-date">
-									<span>Level H Core 2 2023/24</span>
+									<h4>Level H Core 2 2023/24</h4>
+									<span>Core 2 Option Lectures: Psychology of Aesthetics &amp; the Arts</span>
 								</div>
 							</div>
 							<div class="courses-detail">
@@ -969,7 +991,7 @@
 									<h4>Beata</h4>
 									<span>Psychology</span>
 								</div>
-								<p>I really enjoyed the trip to Plas Caerdeon. I think that I really got to know more people doing my course and made some new friends. The food was lovely and the staff there made the activities fun, and treated us like adults, as I was afraid we would be seen as children. I enjoyed the mountain walk but I wish we had more time to do more stuff.</p>
+								<p>I really enjoyed the trip to Plas Caerdeon. I think that I really got to know more people doing my course and made some new friends. The food was lovely and the staff there made the activities fun, and treated us like adults, as I was afraid we would be seen as children. I enjoyed the mountain walk, but I wish we had more time to do more stuff.</p>
 								<div class="tst-rating">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
@@ -1034,12 +1056,14 @@
 									<i class="fa fa-star"></i>
 								</div>
 							</div>
-						</div>
+						</div>-->
 
-					</div>-->
+					</div>
 
 				</div>
 			</div>
+			</div>
+			
 	</section>
 
 	<!-- Contact Info -->
@@ -1061,7 +1085,7 @@
 						<div class="copyright-text">
 							<p>Copyright &copy; 2023 Dr Glen Pennington, Department of Psychology, Liverpool Hope University</p>
 
-							<p>Design: TemplateMo</p>
+							<p>Design: <a href="https://templatemo.com/tm-516-known">TemplateMo</a></p>
 						</div>
 					</div>
 				</div>
@@ -1072,7 +1096,7 @@
 						</div>
 						<address>
 							<p>+44 151 291 3838</p>
-							<p><a href="mailto:enquiry@hope.ac.uk">enquiry@hope.ac.uk</a></p>
+							<p>General enquiries<a href="mailto:enquiry@hope.ac.uk">enquiry@hope.ac.uk</a></p>
 						</address>
 
 						<div class="footer_menu">
@@ -1087,22 +1111,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-4 col-sm-12">
-					<div class="footer-info newsletter-form">
-						<div class="section-title">
-							<!--	<h2>Newsletter Signup</h2>
-						</div>
-						<div>
-							<div class="form-group">
-								<form action="#" method="get">
-									<input type="email" class="form-control" placeholder="Enter your email" name="email" id="email" required="">
-									<input type="submit" class="form-control" name="submit" id="form-submit" value="Send me">
-								</form>
-								<span><sup>*</sup> Please note - we do not spam your email.</span>
-							</div>
-						</div>-->
-						</div>
-					</div>
+				
 
 				</div>
 			</div>
