--- a/index.html
+++ b/index.html
@@ -199,9 +199,8 @@
 					<figure>
 						<figcaption>
 							<h5>Postgraduate</h5>
-							<p>[Name] [Email]</p>
-							<p>[Name] [Email]</p>
-						</figcaption>
+							<p>Marie Stamp [Email:0211231]</p>
+							</figcaption>
 					</figure>
 				</div>
 								<div class="col-md-4 col-sm-4">
