--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 					<figure>
 						<figcaption>
 							<h5>Postgraduate</h5>
-							<p>Marie Stamp [Email:0211231]</p>
+							<p>Marie Stamp [Email:20211231]</p>
 							</figcaption>
 					</figure>
 				</div>
@@ -1122,7 +1122,7 @@ or by <a href="resources/Hope_ISenna_presentation2023Upload.pdf">downloading a P
 								<li><a href="#reps">Student Reps</a></li>
 								<li><a href="#wedid">You said, we did</a></li>
 								<li><a href="#news">News</a></li>
-
+<li><a href="https://glenpennington.github.io/Labs/">Lab Webpages</a></li>
 							</ul>
 						</div>
 					</div>
