--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
 						<div class="container">
 						<div class="col-md-6 col-sm-10">
 								<h1>Connecting with Students</h1>
-								<h3>Connecting with students is very important to the Department of Psychology. There are several opportunities for you to provide feedback on the teaching and learning in Psychology at Liverpool Hope University. The tutors take your feedback seriously, whether that be formal feedback via the course evaluations at the end of the year, feedback from Student Representatives via the Student Voice Committee, or informal feedback in lectures, seminars, and tutorials. At the start of the new academic year, we outline how we are using this feedback for the 2023-24 academic year.
-								</h3>
+								<h3>When you study a psychology course at Liverpool Hope University you become a member of the Department of Psychology. An important aspect of our community is connecting with students, and throughout your course you have the chance to get involved in different events and activities, and shape the learning experience. This website provides details about the ways in which students work with academic tutors, how feedback is used to enhance the psychology courses, and opportunities for tutors and students to get involved in the community.
+								
+																</h3>
 								
 							</div>
 						</div>
@@ -224,13 +225,18 @@
 
 	<section id="wedid">
 		<div class="container">
+		
 			<div class="row">
-			<span> <a href="#wedid">Level C</a> | <a href="#wedidI">Level I</a> | <a href="#wedidH">Level H </a></span>
-				<div class="section-title">
-					<h2>You said.... we did<small>Responding to Level C Student feedback</small>
-					</h2>
+							<div class="section-title">
+					<h2>You said.... we did</h2>
 				</div>
+			<h5>Jump to....<a href="#wedid">Level C</a> | <a href="#wedidI">Level I</a> | <a href="#wedidH">Level H </a></h5>
 			</div>
+			<div class="row">
+			<p>Connecting with students is very important to the Department of Psychology. There are several opportunities for you to provide feedback on the teaching and learning in Psychology at Liverpool Hope University. The tutors take your feedback seriously, whether that be formal feedback via the course evaluations at the end of the year, feedback from Student Representatives via the Student Voice Committee, or informal feedback in lectures, seminars, and tutorials. At the start of the new academic year, we outline how we are using this feedback for the 2023-24 academic year.</p>
+
+			</div>
+			<H2>Responding to Level C Student feedback</h2>
 			<div class="owl-carousel owl-theme owl-courses">
 				<div class="col-md-10 col-sm-10">
 					<div class="item">
@@ -443,7 +449,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="section-title">
-					<h2>You said.... we did<small>Responding to Level I Student feedback</small>
+					<h2>Responding to Level I Student feedback
 					</h2>
 				</div>
 			</div>
@@ -631,8 +637,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="section-title">
-					<h2>You said.... we did<small>Responding to Level H Student feedback</small>
-					</h2>
+					<h2>Responding to Level H Student feedback</h2>
 				</div>
 			</div>
 			<div class="owl-carousel owl-theme owl-courses">
@@ -892,7 +897,7 @@
 							<span>27/10/23</span>
 
 							<span>
-For those who missed Dr. Senna's fascinating research on Wednesday 25/10/23 or wish to access the content, it is now accessible on the Departmental Moodle.
+For those who missed Dr. Senna's fascinating research talk on Wednesday 25/10/23 or wish to access the content, it is now accessible on the Departmental Moodle.
 You can find it under "Research Information" in the "Research Seminars" section.
 or by <a href="resources/Hope_ISenna_presentation2023Upload.pdf">downloading a PDF version of the presentation here</a></span>
 						</div>
