--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@ or by <a href="resources/Hope_ISenna_presentation2023Upload.pdf">downloading a P
 			<div class="row">
 				<div class="col-md-12 col-sm-12">
 					<div class="section-title">
-						<h2>Psychology Comments <small>from around the campus</small></h2>
+						<h2>Voices<small>from around the department</small></h2>
 					</div>
 					<div class="owl-carousel owl-theme owl-client">
 						<div class="col-md-4 col-sm-4">
@@ -1061,24 +1061,25 @@ or by <a href="resources/Hope_ISenna_presentation2023Upload.pdf">downloading a P
 							</div>
 						</div>
 
-<!--	<div class="col-md-4 col-sm-4">
+<div class="col-md-4 col-sm-4">
 							<div class="item">
 								<div class="tst-image">
-									<img src="images/tst-image4.jpg" class="img-responsive" alt="">
+									<img src="images/psy.png" class="img-responsive" alt="">
 								</div>
 								<div class="tst-author">
-									<h4>Andrio</h4>
-									<span>Web Developer</span>
+									<h5>Liam</h5>
+									<span>Psychology Administrator</span>
 								</div>
-								<p>Nam eget mi eu ante faucibus viverra nec sed magna. Vivamus viverra sapien ex, elementum varius ex sagittis vel.</p>
+								<p>On Wednesday, we had Irene's talk on learning to see after blindess. As someone who has no background in the sciences, never mind Psychology, it was a really interesting experience to sit and listen to Irene deliver a talk on the vital research she has undertaken</p>
 								<div class="tst-rating">
+									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
 								</div>
 							</div>
-						</div>-->
+						</div>
 
 					</div>
 
