--- a/index.html
+++ b/index.html
@@ -1154,6 +1154,7 @@ or by <a href="resources/Hope_ISenna_presentation2023Upload.pdf">downloading a P
                                    <input type="email" class="form-control" placeholder="Enter email address" name="email" required="">
 
                                    <textarea class="form-control" rows="6" placeholder="Tell us about your message" name="message" required=""></textarea>
+								   <input type="hidden" name="_url" value="https://liverpoolhopepsychologydept.github.io/Students/">
                               </div>
 
                               <div class="col-md-4 col-sm-12">
