--- a/index.html
+++ b/index.html
@@ -1159,7 +1159,7 @@ or by <a href="resources/Hope_ISenna_presentation2023Upload.pdf">downloading a P
 
                               <div class="col-md-4 col-sm-12">
                                    <input type="submit" class="form-control" name="send message" value="Send">
-								   <input type="hidden" name="_url" value="https://liverpoolhopepsychologydept.github.io/Students/">
+								   <input type="hidden" name="_next" value="https://liverpoolhopepsychologydept.github.io/Students/index.html">
                               </div>
                                 </form>
                               </div>
