--- a/index.html
+++ b/index.html
@@ -1144,7 +1144,8 @@ or by <a href="resources/Hope_ISenna_presentation2023Upload.pdf">downloading a P
 				</div>
 
 				<div class="col-md-4 col-sm-12">                     
-					<form id="contact-form" action="https://formsubmit.co/el/sezunu" method="post">
+					<form action="https://api.web3forms.com/submit" method="POST" id="form">
+					<input type="hidden" name="access_key" value="b30a670a-882d-400f-8eb6-3fb66b77225b" />
                               <div class="section-title">
                                    <h2>Contact us <small>We love conversations. Let's talk!</small></h2>
                               </div>
@@ -1154,12 +1155,12 @@ or by <a href="resources/Hope_ISenna_presentation2023Upload.pdf">downloading a P
                                    <input type="email" class="form-control" placeholder="Enter email address" name="email" required="">
 
                                    <textarea class="form-control" rows="6" placeholder="Tell us about your message" name="message" required=""></textarea>
-								   
+								   <input type="hidden" name="_next" value="https://liverpoolhopepsychologydept.github.io/Students/index.html">
                               </div>
 
                               <div class="col-md-4 col-sm-12">
                                    <input type="submit" class="form-control" name="send message" value="Send">
-								   <input type="hidden" name="_next" value="https://liverpoolhopepsychologydept.github.io/Students/index.html">
+								   
                               </div>
                                 </form>
                               </div>
